<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bolide_obstacle_avoidance</name>
  <version>0.0.0</version>
  <description>Obstacle avoidance algorithm for autonomous car</description>
  <maintainer email="christelle@example.com">Christelle</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bolide_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package></content>
<parameter name="filePath">c:\Users\Christelle\Documents\Codes\M2\PFE\high_level_ros2\bolide_obstacle_avoidance\package.xml