<?xml version="1.0"?>
<package format="3">
  <name>navigation_master</name>
  <version>0.0.0</version>
  <description>Navigation master node that selects between different high-level navigation algorithms and republishes actuator commands.</description>
  <maintainer email="voiture@bolide.com">voiture</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>